# neuron

./: .gitignore  readme.md
.github/workflows/: coverage.yml
coverage/: neuralnet.lcov  neuron.lcov
neuron/: Cargo.toml
neuron/src/: main.rs
neuron/src/helpers/: axon.rs  mod.rs
pt1/neuron/: debug.sh
pt2/: readme.md
pt2/neuron/src/: main.rs
pt2/neuron/src/helpers/: axon.rs  dendrite.rs  neuralnet.rs
pt3/: readme.md
pt3/neuron/: Cargo.toml  debug.sh
pt3/neuron/src/: main.rs
pt3/neuron/src/helpers/: dendrite.rs  image_io.rs  image_neuralnet.rs  mod.rs  multimodal_dendrite.rs  multimodal_neuralnet.rs  network_store.rs  neuralnet.rs  nodenet.rs  text_network_store.rs  text_neuralnet.rs  textdendrite.rs  textneuralnet.rs
pt4/: readme.md
pt4/neuralnet/: Cargo.toml
pt4/neuralnet/src/: lib.rs
pt4/neuralnet/src/core/: brain.rs  mod.rs  neuralnet.rs  nodenet.rs
pt4/neuralnet/src/dendrites/: image_dendrite.rs  multimodal_dendrite.rs  text_dendrite.rs
pt4/neuralnet/src/helpers/: axon.rs  brain.rs  image_dendrite.rs  image_io.rs  mod.rs  multimodal_controller.rs  multimodal_dendrite.rs  multimodal_neuralnet.rs  neuralnet.rs  nodenet.rs  text_dendrite.rs  text_similarity.rs
pt4/neuron/: Cargo.toml
pt4/neuron/src/: main.rs
pt4/neuron/src/helpers/: brain.rs  image_dendrite.rs  mod.rs  multimodal_dendrite.rs  multimodal_neuralnet.rs  neuralnet.rs  nodenet.rs  (+1 more)
pt5/: pt5.code-workspace  readme.md
pt5/.github/workflows/: rust-tests.yml
pt5/neuralnet/: Cargo.toml
pt5/neuralnet/src/: lib.rs
pt5/neuralnet/src/core/: brain.rs  cnn_feature_extractor.rs  mod.rs  model.rs
pt5/neuralnet/src/dendrites/: image_dendrite.rs  text_dendrite.rs
pt5/neuralnet/src/helpers/: mod.rs  multimodal_neuralnet.rs  pattern_classifier.rs
pt5/neuralnet/src/tensor/: adapters.rs  image_utils.rs  mod.rs  tensor4d.rs  tensor_io.rs
pt5/neuralnet/src/training/: dense_baseline.rs  mod.rs  trainer.rs  training_loop.rs
pt5/neuron/: .gitignore  Cargo.toml  multimodal_store_main_demo_instance_342cbaf894d30f88_classifier.json  readme.md
pt5/neuron/.cargo/: config.toml
pt5/neuron/src/: architecture.puml  brain_stress_walkthrough.rs  cnn_classifier_walkthrough.rs  distributed_server_walkthrough.rs  main.rs  multimodal_demo.rs  multimodal_tensor_variants_tests.rs  multimodal_tensor_walkthrough.rs  rag_dataset_walkthrough.rs  rag_tensor_tests.rs  rag_walkthrough.rs  trainer_fixtures.rs  trainer_presentation.rs  trainer_walkthrough.rs
scripts/: coverage.sh
(+13 files in other folders)
