[package]
name = "neuralnet"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
uuid = { version = "1.22.0", features = ["serde", "v4", "v7", "fast-rng"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
