[package]
name = "neuron"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]
description = "Runnable companion app and walkthrough harness for the neuralnet library"

[features]
default = []
# uncomment this below for mlx (if you have an Mx Apple Device running Tahoe 25.xx+)
# default = ["offloading-mlx"]
# uncomment this below for cuda (if you have an NVidia card attached)
# default = ["offloading-cuda"]

offloading-mlx = ["neuralnet/offloading-mlx"]
offloading-cuda = ["neuralnet/offloading-cuda"]

[dependencies]
neuralnet = { path = "../../library/neuralnet" }
