[package]
name = "neuron"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]
readme = "./../readme.md"
description = "Runnable companion app and walkthrough harness for the neuralnet library"

[features]
default = []
# uncomment this below for mlx (if you have an Mx Apple Device running Tahoe 25.xx+)
# default = ["backend-mlx"]
# uncomment this below for cuda (if you have an NVidia card attached)
# default = ["backend-cuda"]

backend-mlx = ["neuralnet/backend-mlx"]
backend-cuda = ["neuralnet/backend-cuda"]
backend-distributed = ["neuralnet/backend-distributed"]
backend-distributed-libp2p = ["neuralnet/backend-distributed-libp2p"]

# Backward-compatible aliases (to be removed in a future major release)
offloading-mlx = ["backend-mlx"]
offloading-cuda = ["backend-cuda"]
offloading-distributed = ["backend-distributed"]
distributed-libp2p = ["backend-distributed-libp2p"]

[dependencies]
neuralnet = { path = "../../library/neuralnet" }
